# domos

./: .gitignore  .gitmodules  README.md
arduino/: README.md  atmega328pins.md  measurements
arduino/beacon433/: beacon433.ino  platformio.ini
arduino/beacon433/src/: beacon433.ino
arduino/beaconRF24/: platformio.ini
arduino/beaconRF24/src/: beacon433.ino  beaconRF24.ino
arduino/lib/misc/: diagnostic.h  voltmeter.h
arduino/magsensor/: Makefile  README.md  magsensor.fzz  magsensor.ino  platformio.ini
arduino/magsensor/kicad/: magsensor.bak  magsensor.net  magsensor.pro  magsensor.sch
arduino/magsensor/lib/: include  misc  rfprotocol
arduino/magsensor/src/: magsensor.ino
host/: Dockerfile  README.md
host/docker/arduinodev/: Dockerfile  README.md
host/docker/buildroot/: Dockerfile  README.md  domos.config  prepare_image.sh  roofs_on_nfs.md
host/docker/buildroot/board/raspberrypi0/: fix_uart.sh  increase_gpu_mem.sh  post-build.sh
host/docker/buildroot/board/raspberrypi2/: kiosk.sh  post-build.sh
host/docker/buildroot/configs/: raspberrypi0_defconfig  raspberrypi2_defconfig  raspberrypi2_defconfig.md
host/docker/buildroot/overlays/: domos.config
host/docker/buildroot/overlays/ap/: README.md
host/docker/buildroot/overlays/ap/etc/: dhcpcd.conf  hostapd.conf
host/docker/buildroot/overlays/ap/sbin/: check_configuration  configure_wifi  set_ssid_ap
host/docker/buildroot/overlays/camera/root/: .profile
host/docker/buildroot/overlays/commonconf/root/: commonconf
host/docker/buildroot/overlays/ezwifi/root/: .profile
host/docker/buildroot/overlays/ezwifi/sbin/: check_configuration  configure_wifi
host/docker/buildroot/overlays/kiosk/root/: README.md  config.ini  home.url
host/docker/buildroot/overlays/wificlient/sbin/: set_ssid
host/docker/buildroot/package/433Utils/: 0001-Add-install-target-for-buildroot.patch  0001-Add-more-details-to-the-output-to-match-ReceiveDemo.patch  0001-Add-more-details-to-the-output-to-match-ReceiveDemo_.patch  0002-Add-CMakeLists.txt.patch  0003-Fix-headers-for-buildroot.patch  433Utils.mk  Config.in
host/docker/buildroot/package/RF24/: 0001-Add-CMakeLists.txt.patch  0002-Force-includes-to-RPi.patch  Config.in  RF24.mk
host/docker/buildroot/package/busybox/: README.md  busybox.config
host/docker/buildroot/package/domos/: README.md  domos.mk
host/docker/buildroot/package/domos/frontend/: Config.in  frontend.mk
host/docker/buildroot/package/domos/kiosk/: Config.in  kiosk.mk
host/docker/buildroot/package/domos/libhttp/: Config.in  libhttp.mk
host/docker/buildroot/package/domos/librfprotocol/: Config.in  librfprotocol.mk
host/docker/buildroot/package/domos/receiver/: Config.in  receiver.mk
host/docker/buildroot/package/ffmpeg/: README.md  ffmpeg.mk
host/docker/buildroot/package/qt5webengine/: 0001-Fix-compilation-issue-timespec-not-defined.patch  0002-Fix-__libc-alloc-function.patch  Config.in  chromium.inc  qt5webengine.mk
host/docker/buildroot/package/qt5webengine/5.9.1/: 0001-Always-compile-QWebEnginePage-print.patch  0002-Load-libEGL-and-libGLES2-symbols-implicitly.patch
host/docker/buildroot/package/qt5webview/: Config.in  qt5webview.mk
host/docker/buildroot/package/rcswitch/: 0001-Add-CMakeLists.txt.patch  0002-Add-callback-handler.patch  Config.in  rcswitch.mk
host/docker/buildroot/package/set_overscan/: 0001_use_environment_in_Makefile.patch  Config.in  set_overscan.mk
host/docker/buildroot/package/uclibc/: uClibc-ng.config
host/docker/buildroot/patches/hostapd/2.6/: README.md  buildroot-hostapd-2.6-rtl871xdrv.patch
host/docker/buildroot/patches/uclibc/: 0001-use-libc-aliases-for-allocation-function.patch
host/docker/ffmpeg/: Dockerfile  streaming.md
host/docker/rethinkdb/: Dockerfile
host/docker/rpidev/: Dockerfile  README.md
lib/: README.md
lib/http/: CMakeLists.txt  http.c  http.h
lib/include/: sensor_types.h
lib/rfprotocol/: .gitignore  CMakeLists.txt  README.md
lib/rfprotocol/src/: CMakeLists.txt  bitop.c  bitop.h  protocol.c  protocol.h  sensor_types.h
lib/rfprotocol/test/: .gitignore  CMakeLists.txt  main.cc  test_bitop.hh  test_protocol.c  test_protocol.hh
rpi/: README.md  docker_on_raspberry.md  rpi-pinout.md
rpi/camera/: ffserver.conf  frame_buffer.md  index.html
rpi/cmaketc/: README.md  Toolchain-raspberrypi-arm.cmake
rpi/docker/: Dockerfile  README.md  mount.home  startup.sh
rpi/docker/dev-image/: README.md
rpi/docker/nginx/: Dockerfile  nginx.conf
rpi/frontend/: Makefile  README.md  package-lock.json  package.json  package.jsony  tsconfig.json  tslint.json  webpack.config.js
rpi/frontend/app/: app.component.html  app.component.ts  app.module.ts  index.html  main.ts
rpi/frontend/app/classes/: camera.ts
rpi/frontend/app/components/camera/: camera.component.html  camera.component.ts
rpi/frontend/app/components/cameras-list/: cameras-list.component.html  cameras-list.component.ts
rpi/frontend/app/js/: app.component.ts  camera.component.ts  main.ts
rpi/frontend/app/services/: cameras.service.spec.ts  cameras.service.ts  hls.service.ts
rpi/frontend/src/: styles.css
rpi/frontend/src/app/: app.component.ts  app.module.ts  main.ts
rpi/frontend/src/app/components/camera/: camera.component.html  (+1 more)
rpi/frontend/src/app/services/: cameras.service.spec.ts  cameras.service.ts  hls.service.ts
rpi/frontend/tests/: karma.conf.js  test.js  test.ts
rpi/host/: Dockerfile  README.md  nfs-start.sh
rpi/receiver/: .gitignore  CMakeLists.txt  README.md  prepare_dependencies.sh  receiver.fzz
rpi/receiver/buildroot/: CMakeLists.txt
rpi/receiver/cmake/: CMakeLists.txt  README.md
rpi/receiver/rfprotocol/test/: CTestTestfile.cmake  testrfprotocol
rpi/receiver/src/: Backend.h  HTTPBackend.cpp  HTTPBackend.h  RBackend.cpp  RBackend.h  RF33_adapter.cpp  RF33_adapter.hpp  main.cpp  radio_adapter.hpp  verbose.h
rpi/rethinkdb/: Dockerfile  README.md
rpi/server/: constants.js  db-filesystem.js  db-memory.js  index.js  package.json  rest-driver.js  server.js
rpi/server/tests/: db-filesystem.spec.js  db-memory.spec.js  db.spec.helper.js
(+47 files in other folders)
